--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">JokeApp</string>
     <string name="button_text">Get Joke</string>
     <string name="no_joke_found">No joke found</string>
-    <string name="first">Chris</string>
-    <string name="last">Winikka</string>
+    <string name="first">Bob</string>
+    <string name="last">The Chicken</string>
     <string name="get_joke">Get Joke</string>
     <string name="settings">Settings</string>
 </resources>
