--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="last">The Chicken</string>
     <string name="get_joke">Get Joke</string>
     <string name="settings">Settings</string>
+    <string name="default_joke_type">nerdy</string>
 </resources>
